# benchmark-forecasting

./: .gitignore  0_Clean_EpochAI_benchmarks.ipynb  0_Process_benchmarks.ipynb  1_Forecasts.ipynb  1_Logistic_forecast.ipynb  3_Plot_forecasts.ipynb  README.md  analytics.py  benchmarks_lower_bounds.csv  benchmarks_lower_bounds.csv.numbers  data_pipeline.py  forecasting.py  human_baselines.csv  main.ipynb  plots.ipynb  plotting.py  pyproject.toml  scale_seal_leaderboards_raw.csv  validation.ipynb
Fits/: ARC-AGI-1_harvey_independent_top3_idata.nc  ARC-AGI-1_harvey_independent_top3_metadata.pkl  ARC-AGI-1_harvey_joint_hyperparameters_all_top3_frontier.csv  ARC-AGI-1_independent_top3_idata.nc  ARC-AGI-1_independent_top3_metadata.pkl  ARC-AGI-1_joint_hyperparameters_all_top3_frontier.csv  ARC-AGI-2_harvey_independent_top3_frontier.csv  ARC-AGI-2_harvey_independent_top3_idata.nc  ARC-AGI-2_harvey_independent_top3_metadata.pkl  ARC-AGI-2_independent_top3_frontier.csv  ARC-AGI-2_independent_top3_idata.nc  ARC-AGI-2_independent_top3_metadata.pkl  ARC-AGI-2_joint_hyperparameters_all_top3_frontier.csv  ARC-AGI_harvey_independent_top3_idata.nc  ARC-AGI_harvey_independent_top3_metadata.pkl  ARC-AGI_independent_top3_frontier.csv  ARC-AGI_independent_top3_idata.nc  ARC-AGI_independent_top3_metadata.pkl  ARC-AGI_joint_hyperparameters_all_top3_frontier.csv  ARC_(AI2)_harvey_independent_top3_idata.nc  ARC_(AI2)_harvey_independent_top3_metadata.pkl  ARC_(AI2)_independent_top3_idata.nc  ARC_(AI2)_independent_top3_metadata.pkl  ARC_(AI2)_joint_hyperparameters_all_top3_frontier.csv  (+499 more)
(+91 files in other folders)
