[project]
name = "benchmark-forecasting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arviz>=0.17.1",
    "bs4>=0.0.2",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "playwright>=1.57.0",
    "pymc>=5.12.0",
    "requests>=2.32.5",
    "scipy>=1.13.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
